[gd_scene load_steps=5 format=3 uid="uid://dkbng2377hr3c"]

[ext_resource type="LabelSettings" uid="uid://heihdmcx4k6f" path="res://assets/LG_red_64.tres" id="1_h5e7s"]
[ext_resource type="Script" path="res://scenes/game-over-ui/game_over_ui.gd" id="1_t7q5s"]
[ext_resource type="LabelSettings" uid="uid://x76i530exkxn" path="res://assets/LG_lightBlue_40.tres" id="2_oatej"]
[ext_resource type="AudioStream" uid="uid://cl4tgaxoo0xlk" path="res://assets/audio/game_over.wav" id="3_4mjb6"]

[node name="GameOverUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t7q5s")

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = ExtResource("1_h5e7s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpaceLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "PRESS SPACE
TO
RESTART"
label_settings = ExtResource("2_oatej")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4mjb6")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
